Add new image and update index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -94,14 +94,14 @@
       <div class="footer-container">
         <div class="about-me">
           <img
-            src="{{ url_for('static', filename='Ganteng.jpg') }}"
+            src="{{ url_for('static', filename='Ganteng2.jpeg') }}"
             alt="Profile Photo"
             class="profile-img"
           />
           <div class="bio">
             <h3>About Me</h3>
             <p>
-              Halo! Saya Rigel, seorang mahasiswa prodi teknologi informasi yang
+              Halo! Saya Rigel Nadimaisy, seorang mahasiswa prodi teknologi informasi yang
               antusias dalam melaksanakan project akhir pembuatan website. Saya
               membuat MovieScope sebagai proyek pembelajaran sekaligus
               eksplorasi API film dunia 🌍.
