--- a/templates/index.html
+++ b/templates/index.html
@@ -101,8 +101,8 @@
           <div class="bio">
             <h3>About Me</h3>
             <p>
-              Halo! Saya Rigel Nadimaisy, seorang mahasiswa prodi teknologi informasi yang
-              antusias dalam melaksanakan project akhir pembuatan website. Saya
+              Halo! Saya Rigel Nadimaisy, seorang mahasiswa yang
+              antusias dalam mencoba membuat website. Saya
               membuat MovieScope sebagai proyek pembelajaran sekaligus
               eksplorasi API film dunia 🌍.
             </p>
